fix: add disk cleanup for build-ci (#220)
* Reserve disk space during build CI

Signed-off-by: ISP akm <akm@isp.co.jp>

* fix indent

Signed-off-by: ISP akm <akm@isp.co.jp>

* fix

Signed-off-by: ISP akm <akm@isp.co.jp>

* measure disk usage

Signed-off-by: ISP akm <akm@isp.co.jp>

* Output disk usage details in stages

Signed-off-by: ISP akm <akm@isp.co.jp>

* ci(pre-commit): autofix

* Corrected areas where half-width spaces were not used.

Signed-off-by: ISP akm <akm@isp.co.jp>

* add measure disk detail usage

Signed-off-by: ISP akm <akm@isp.co.jp>

* Indirectly check the size during Docker build from the history

Signed-off-by: ISP akm <akm@isp.co.jp>

* ci(pre-commit): autofix

* fix syntax

Signed-off-by: ISP akm <akm@isp.co.jp>

* add docker inspect

Signed-off-by: ISP akm <akm@isp.co.jp>

* ci(pre-commit): autofix

* add check disk usage to dockerfile

Signed-off-by: ISP akm <akm@isp.co.jp>

* ci(pre-commit): autofix

* fix syntax

Signed-off-by: ISP akm <akm@isp.co.jp>

* remove extra spaces

Signed-off-by: ISP akm <akm@isp.co.jp>

* fix build

Signed-off-by: ISP akm <akm@isp.co.jp>

* Expand the scope of inspections within Docker builds

Signed-off-by: ISP akm <akm@isp.co.jp>

* Add only disk cleanup to the build CI workflow without modifying the Dockerfile

Signed-off-by: ISP akm <akm@isp.co.jp>

* revert build_autoware.dockerfile

Signed-off-by: ISP akm <akm@isp.co.jp>

---------

Signed-off-by: ISP akm <akm@isp.co.jp>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/.github/workflows/build_autoware.yaml
+++ b/.github/workflows/build_autoware.yaml
@@ -14,6 +14,13 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Clean up disk space
+        run: |
+          sudo apt-get autoremove -y
+          sudo apt-get clean
+          sudo rm -rf /usr/share/dotnet
+          docker system prune -a -f --volumes || true
+
       - name: Docker Build
         run: |
           docker pull osrf/ros:humble-desktop
