fix: update ansible roles and setup script for jazzy

--- a/ansible/roles/visualizer/tasks/main.yml
+++ b/ansible/roles/visualizer/tasks/main.yml
@@ -10,7 +10,7 @@
   pip:
     requirements: "{{ requirements_path }}"
     executable: pip3
-    extra_args: --ignore-installed
+    extra_args: --ignore-installed "{{ '--break-system-packages' if ansible_distribution_version >= '24.04' else '' }}"
   become: false
   args:
     chdir: "{{ WORKSPACE_ROOT }}"
