--- a/ansible/roles/caret/tasks/main.yml
+++ b/ansible/roles/caret/tasks/main.yml
@@ -38,6 +38,7 @@
   pip:
     requirements: "{{ requirements_path }}"
     executable: pip3
+    extra_args: "{{ '--break-system-packages' if ansible_distribution_version >= '24.04' else '' }}"
   become: false
   args:
     chdir: "{{ WORKSPACE_ROOT }}"
